# elastic

./: Cargo.toml  README.md
ci/: nightly.sh
contributing/: getting-started.md
examples/account_sample/: README.md
examples/account_sample/src/model/: account.rs
examples/account_sample/src/ops/: mod.rs
src/elastic/: Cargo.toml
src/elastic/examples/: basic.rs  basic_async.rs  bulk.rs  bulk_async.rs  bulk_async_stream.rs  custom_response.rs  get.rs  index.rs  load_balanced_async.rs  ping.rs  pre_send.rs  raw.rs  typed.rs  typed_async.rs  update.rs
src/elastic/src/: error.rs  lib.rs
src/elastic/src/client/: mod.rs
src/elastic/src/http/: asynchronous.rs  mod.rs  synchronous.rs
src/elastic/src/types/: __derive.rs  derive.rs  mod.rs
src/elastic_derive/src/: lib.rs
src/elastic_derive/src/elastic_type/: mod.rs
tests/derive_compile_test/: Cargo.toml
tests/integration/: Cargo.toml
tests/integration/containers/: default.Dockerfile  default.elasticsearch.yml
tests/integration/src/: build_container.rs  main.rs  run_tests.rs  wait_until_ready.rs
tests/integration/src/bulk/: delete.rs  index_create.rs  index_get.rs  raw_index_create.rs  raw_index_get.rs  stream.rs  stream_tiny_size_limit.rs  stream_tiny_timeout.rs  stream_zero_size_limit.rs
tests/integration/src/document/: delete.rs  simple_index_get.rs  simple_mapping.rs  (+4 more)
tools/: generate_requests.sh
tools/generate_requests/: Cargo.toml
tools/generate_requests/src/: main.rs
tools/generate_requests/src/parse/: mod.rs
tools/requests_codegen/: Cargo.toml
tools/requests_codegen/src/: main.rs
(+131 files in other folders)
