[package]
name = "generate_requests"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false

[dependencies]
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
syn = { version = "~0.11", features = ["full"] }
quote = "~0.3"
Inflector = "~0.11"

[dev-dependencies]
json_str = "*"
